--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     background-color: #00400F;
     color: #ffffff;
 }
-.commonBox form input[type="password"], .commonBox form input[type="text"], .commonBox form input[type="email"], .commonBox form input[type="tel"] {
+.commonBox form input[type="password"], .commonBox form input[type="text"], .commonBox form input[type="email"], .commonBox form input[type="tel"],  .commonBox form input[type="number"] {
     width: 310px;
     height: 50px;
     border: 1px solid #dee0e4;
